<resources>
    <string name="app_name">Driving Exam</string>

    <!--<Admob App ID>-->
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>

    <!--<FACEBOOK_APP_ID>-->
    <string name="facebook_app_id">266348788377399</string>

    <!--<STARTAPP_APP_ID>-->
    <string name="startapp_app_id">202214327</string>

    <!--<ONESIGNAL_APP_ID>-->
    <string name="ONESIGNAL_APP_ID">b5d3898a-4c76-4157-80c3-10623eaa3ee5</string>


    <string name="made_with_in_srilanka">Made With ❤ in Sri Lanka</string>

    <string name="internet_not_connected">Please connect to internet</string>
    <string name="server_no_conn">Server not connected</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="internet_not_conn">Internet not connected</string>
    <string name="retry">Retry</string>
    <string name="refresh">Refresh</string>
    <string name="no_data_found">No Data Found</string>
    <string name="server_error">Server Error</string>
    <string name="error_connect_net_tryagain">Please connect to internet and try again</string>
    <string name="try_again">Try Again</string>
    <string name="err_server">err server</string>
    <string name="error_unauth_access">Unauthorized Access</string>
    <string name="err_internet_not_conn">err internet</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="version">Version</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="cache_cleared">Cache Cleared</string>
    <string name="clearing_cache">Clearing Cache..</string>
    <string name="app_theme">App Theme</string>
    <string name="dark_or_light_mode">Dark or Light Mode</string>
    <string name="cache">Cache</string>
    <string name="email">Email</string>
    <string name="about_">About</string>
    <string name="about">About Us</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="social_links">Social links, policy</string>
    <string name="this_app_privacy_policy">This app privacy policy</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="love_this_app">Love this app? Let us Know in the Google Play Store how we can make it even better</string>
    <string name="share">Share</string>
    <string name="share_the_app">Share the app with your friends and family</string>
    <string name="language">Language</string>
    <string name="exit">Exit</string>
    <string name="sure_exit">Are you sure you want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="result">Result</string>
    <string name="road_signs">Road Signs</string>

    <string name="welcomeback">Welcome</string>
    <string name="signin_to_continue">Sign In to continue</string>
    <string name="remember_me">Remember Me</string>
    <string name="registering">Registering..</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="signup">SignUp</string>
    <string name="cannot_empty">Field cannot be empty</string>
    <string name="pass_end_space">Please do not add space at end</string>
    <string name="name">Name</string>
    <string name="cpassword">Confirm Password</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="enter_name">Please Enter Name</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="enter_cpassword">Please Enter Confirm Password</string>
    <string name="pass_nomatch">Confirm Password not matched</string>
    <string name="logout">Logout</string>
    <string name="logout_success">Logout Successful</string>
    <string name="image">Image</string>
    <string name="error_password_sort">This password is too short</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="forgot_pass">Forgot Your Password?</string>
    <string name="dnt_have_acc">Don\'t have an account?</string>
    <string name="forgot_password_message">Enter your valid email address below and we will send you email with instructions on how to change your password</string>
    <string name="send">Send</string>
    <string name="already_have_an_account_login">Already have an account?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="not_log">Not Logged In</string>
    <string name="invalid_user">Invalid User</string>
    <string name="email_empty">Please Enter Email</string>
    <string name="login_google">Login with Google</string>
    <string name="login_fb">Login with Facebook</string>
    <string name="err_login_goole">Error while login with google</string>
    <string name="login_success">Login Successful</string>
    <string name="loading">Loading</string>

    <!--Don't Change language-->
    <string name="todo">TODO</string>
</resources>