<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_translation"
            android:icon="@drawable/ic_translation__"
            android:title="@string/language" />

        <item
            android:id="@+id/nav_road_signs"
            android:icon="@drawable/ic_road_sign"
            android:title="@string/road_signs" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_set"
            android:icon="@drawable/ic_cog"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/login" />
    </group>


</menu>