<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_forgostpass"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title=""
        app:titleTextColor="?attr/colorBackgroundTint"
        android:background="?attr/colorBackground"
        style="@style/Toolbar"
        app:navigationIcon="?iconBackspace"
        app:titleTextAppearance="@style/ToolbarTextAppearanceNormal"/>

    <ImageView
        android:id="@+id/tv_tma"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_below="@+id/toolbar_forgostpass"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_forgot"
        app:tint="?attr/colorBackgroundTint" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_tma"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/forgot_pass"
        android:textColor="?attr/colorBackgroundTint"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:text="@string/forgot_password_message"
        android:textSize="16sp"
        android:textColor="?attr/colorSubTitle" />


    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:paddingTop="2dp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/bg_edit_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="7dp"
                android:contentDescription="@string/image"
                app:tint="?colorBackgroundTint"
                android:src="@drawable/ic_email3" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="?colorBackgroundTint">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_forgot_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textColor="?colorBackgroundTint"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/button_forgot_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_edit_text"
        android:backgroundTint="?attr/colorAccent"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/send"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

</RelativeLayout>