<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorBackground"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/login_ll">

        <ImageView
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_signup"
            android:scaleType="fitEnd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentTop="true"
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/welcomeback"
            android:textAlignment="viewStart"
            android:textColor="?attr/colorAccent"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="viewStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv"
            android:text="@string/signin_to_continue"
            android:textColor="?attr/colorSubTitle"
            android:textSize="15sp" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/login_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_ll_sign"
        android:orientation="vertical"

        android:paddingBottom="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        tools:ignore="UselessParent">


        <!--Email-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_text"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ImageView
                    android:padding="1dp"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_email3"
                    app:tint="?colorBackgroundTint" />



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="?colorBackgroundTint">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:textColor="?colorBackgroundTint"
                        android:textSize="16sp"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


        </RelativeLayout>

        <!--Password-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edit_text"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_lock"
                    app:tint="?colorBackgroundTint" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="?colorBackgroundTint">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:textColor="?colorBackgroundTint"
                        android:textSize="16sp"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp">

            <lk.nemosofts.androidsdk.view.SmoothCheckBox
                android:id="@+id/cb_rememberme"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:smoothCheckBox_color_unchecked_stroke="?colorBorder"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                android:text="@string/remember_me"
                android:textColor="?attr/colorSubTitle"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edit_text"
                android:backgroundTint="?colorAccent"
                android:text="@string/login"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle,TextContrastCheck" />

            <Button
                android:id="@+id/button_skip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edit_text"
                android:text="@string/skip"
                android:textColor="?colorAccent"
                tools:ignore="ButtonStyle,TextContrastCheck" />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_forgotpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="?attr/selectableItemBackground"
            android:padding="5dp"
            android:text="@string/forgot_pass"
            android:textColor="?attr/colorAccent"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />


        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:visibility="gone" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_fb"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="@string/login_fb"
            android:textAllCaps="false"
            android:textColor="@color/social_fb"
            android:textStyle="bold"
            app:icon="@drawable/ic_facebook"
            app:iconTint="#1F88E4"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconSize="18dp"
            app:strokeColor="@color/social_fb"
            app:strokeWidth="3dp"
            app:cornerRadius="25dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_google"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            android:text="@string/login_google"
            android:textAllCaps="false"
            android:textColor="@color/social_ggle"
            android:textStyle="bold"
            app:cornerRadius="25dp"
            app:icon="@drawable/ic_google"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconSize="18dp"
            app:iconTint="@null"
            app:strokeColor="@color/social_ggle"
            app:strokeWidth="3dp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_ll_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dnt_have_acc"
            android:textColor="?attr/colorSubTitle"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_login_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/signup"
            android:textColor="?attr/colorAccent"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <View
        android:id="@+id/login_view"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="80dp"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="?attr/colorAccent" />

</RelativeLayout>