<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_notlog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/not_log"
        android:textColor="?attr/colorBackgroundTint"
        android:textSize="20sp"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    tools:ignore="UselessParent">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/profile_img_bg"
                        android:scaleType="centerCrop"
                        android:src="@drawable/material_design_default"
                        android:layout_width="match_parent"
                        android:layout_height="190dp"/>

                    <androidx.appcompat.widget.Toolbar
                        app:titleTextColor="#fff"
                        app:title="@string/profile"
                        app:navigationIcon="@drawable/ic_backspace_white"
                        android:id="@+id/toolbar_pro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Toolbar"
                        app:titleTextAppearance="@style/ToolbarTextAppearanceNormal" />

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_alignBottom="@+id/profile_img_bg"
                        android:layout_marginStart="30dp"
                        android:layout_marginBottom="-60dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_person_flat"
                        app:riv_border_color="?attr/colorBackground"
                        app:riv_border_width="5dp"
                        app:riv_corner_radius="60dp" />


                </RelativeLayout>
            </RelativeLayout>


            <LinearLayout
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/name"
                        android:textColor="?attr/colorTitle"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_prof_fname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorTitle"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="12dp"
                    android:background="?attr/colorBorder" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/email"
                        android:textColor="?attr/colorTitle"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_prof_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorTitle"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:id="@+id/view_prof_phone"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="12dp"
                    android:background="?attr/colorBorder" />

                <LinearLayout
                    android:id="@+id/ll_prof_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/phone"
                        android:textColor="?attr/colorTitle"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_prof_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorTitle"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="10dp"
                    android:background="?attr/colorBorder" />



            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginBottom="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/made_with_in_srilanka"
            android:textColor="#607d8b"
            android:textAlignment="center"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

</LinearLayout>